cmake_minimum_required(VERSION 3.10)
project(My_project C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

cmake_policy(SET CMP0074 NEW)

add_executable(bst src/bst.c)

if(MSVC)
    target_compile_options(bst PRIVATE /W4 /WX)
else()
    target_compile_options(bst PRIVATE -Wall -Wextra -Werror)
endif()
